fix: correcciones de error en cocteles y task

--- a/src/pages/admin/cocteles.astro
+++ b/src/pages/admin/cocteles.astro
@@ -22,6 +22,6 @@ const title = "Gestor de Cocteles y Recetas | La Reserva";
   </div>
 
   <div class="bg-white/50 min-h-[600px] rounded-xl">
-    <CocktailManager client:load />
+    <CocktailManager client:only="react" />
   </div>
 </Layout>
